# PROLO-G_sfml

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  package_release.sh  prolog.cpp  prolog.sh
.github/: copilot-instructions.md
assets/level/: test2.txt  test3.txt
assets/levels/: test.txt  test2.txt
src/_devTool/: debug_console.cpp  debug_console.hpp
src/animation/: matrix_animation.cpp  matrix_animation.h  matrix_animation.hpp  multi_texture.cpp  multi_texture.hpp
src/animations/: matrix_animation.cpp  matrix_animation.h  multi_texture.cpp  multi_texture.h
src/carte/: carte.cpp  carte.h  case.cpp  case.h  direction.cpp  direction.h  porte.cpp  porte.h
src/factory/: item_factory.cpp  item_factory.h  item_factory.hpp  monster_factory.cpp  monster_factory.h  monster_factory.hpp
src/factorys/: item_factory.cpp  item_factory.h  monster_factory.cpp  monster_factory.h  monstre_factory.cpp  monstre_factory.h
src/game_object/: game_object.cpp  game_object.h  game_object.hpp
src/game_object/dynamic/: dynamic_game_object.cpp  dynamic_game_object.h  dynamic_game_object.hpp
src/game_object/dynamic/monster/: dog.cpp  dog.h  dog.hpp  monster.cpp  monster.hpp
src/game_object/dynamic/player/: inventory.cpp  inventory.h  inventory.hpp  player.cpp  player.hpp
src/game_object/static/: static_game_object.cpp  static_game_object.hpp
src/game_object/static/interactible/: interactible.cpp  interactible.h  interactible.hpp  lever.cpp  lever.h  lever.hpp
src/game_object/static/pickup/: battery.cpp  battery.h  battery.hpp  bomb.cpp  bomb.h  bomb.hpp  detector.cpp  detector.h  detector.hpp  mine.cpp  mine.h  mine.hpp  pickup.cpp  pickup.h  pickup.hpp
src/game_objects/: game_object.cpp  game_object.h
src/game_objects/dynamic/: dynamic_game_object.cpp  dynamic_game_object.h
src/game_objects/dynamic/joueur/: inventaire.cpp  inventaire.h  joueur.cpp  joueur.h
src/game_objects/dynamic/monster/: dog.cpp  monster.h
src/game_objects/dynamic/monstre/: chien.cpp  chien.h  monstre.cpp  monstre.h
src/game_objects/dynamic/player/: inventory.cpp  inventory.h  player.cpp  player.h
src/game_objects/static/: static_game_object.cpp  static_game_object.h
src/game_objects/static/item/: batterie.cpp  batterie.h  battery.cpp  battery.h  bomb.cpp  bomb.h  bombe.cpp  bombe.h  detecteur.cpp  detecteur.h  detector.cpp  detector.h  item.cpp  item.h  mine.cpp  mine.h
src/hud/: dynamic_button_container.hpp  hud.cpp  hud.h  hud.hpp  hud_grid.cpp  hud_grid.hpp  log.cpp  log.h  log.hpp
src/hud/boutons/: bouton_base.cpp  bouton_image.cpp  bouton_image.h  bouton_levier.cpp  bouton_levier.h  bouton_text.cpp  bouton_text.h
src/hud/button/: button_base.cpp  button_base.h  button_base.hpp  button_image.cpp  button_image.h  button_image.hpp  button_lever.cpp  button_lever.hpp  button_text.cpp  button_text.h  button_text.hpp
src/hud/buttons/: button_base.cpp  button_image.cpp  button_lever.h  button_text.cpp
src/manager/: event_manager.cpp  event_manager.h  event_manager.hpp  game_event.hpp  game_event_system.cpp  game_event_system.hpp  game_manager.cpp  game_manager.h  game_manager.hpp  viewport_manager.cpp  viewport_manager.hpp
src/map/: case.cpp  case.h  case.hpp  direction.cpp  direction.h  door.cpp  door.h  door.hpp  map.cpp  map.h  map.hpp
src/utils/color/: color_generator.cpp  color_generator.h
src/utils/fileReader/: level_file_handeler.cpp  level_file_handeler.h
src/utils/logger/: logger.cpp  logger.hpp
(+2 files in other folders)
